<resources>
    <string name="app_name">163</string>
    <string name="play">play</string>
    <string name="stats">stats</string>
    <string name="readme">readme.txt</string>
    <string name="settings">settings</string>
    <string name="speed_mode">Speed Mode</string>
    <string name="practice_mode">Practice Mode</string>
    <string name="title_activity_settings">Settings</string>


    <string name="plus_button_text">+</string>
    <string name="sub_button_text">-</string>
    <string name="mult_button_text">x</string>
    <string name="div_button_text">/</string>
    <string name="split_button_text">[ -/- ]</string>
    <string name="submit_button_text">=</string>
    <string name="return_button_text">return home</string>
    <string name="choose_mode_text">choose your mode:</string>

    <string name="play_1_min">1 minute</string>
    <string name="play_2_min">2 minutes</string>
    <string name="play_5_min">5 minutes</string>
    <string name="play_custom">custom:</string>
    <string name="play_endless">endless</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
