<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/LightSteelBlue"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="me.joshuayuan.a163.PlayActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="50sp"
        android:text="@string/choose_mode_text"
        android:textColor="@color/Black"
        android:background="@color/WhiteSmoke"
        android:padding="20dp"
        android:fontFamily="OpenSans-Regular"
        android:gravity="center"
        />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_weight="2"
        >
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/play_one_minute"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/cardslot"
                android:layout_margin="5dp"
                android:text="@string/play_1_min"
                android:textColor="@color/Black"
                android:textSize="30sp"
                android:fontFamily="OpenSans-Regular"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/play_two_minutes"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/cardslot"
                android:layout_margin="5dp"
                android:text="@string/play_2_min"
                android:textColor="@color/Black"
                android:textSize="30sp"
                android:fontFamily="OpenSans-Regular"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/play_five_minutes"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/cardslot"
                android:layout_margin="5dp"
                android:text="@string/play_5_min"
                android:textColor="@color/Black"
                android:textSize="30sp"
                android:fontFamily="OpenSans-Regular"
                android:textAllCaps="false"
                />

        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="1">
            <EditText
                android:id="@+id/play_customize"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cardslot"
                android:layout_margin="5dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:hint="@string/play_custom"
                android:textColorHint="@color/SlateGray"
                android:textSize="30sp"
                android:fontFamily="OpenSans-Regular"
                />
            <Button
                android:id="@+id/play_endless"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/cardslot"
                android:layout_margin="5dp"
                android:text="@string/play_endless"
                android:textColor="@color/Black"
                android:textSize="30sp"
                android:fontFamily="OpenSans-Regular"
                android:textAllCaps="false"
                />

        </TableRow>

    </TableLayout>

</LinearLayout>
