<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:weightSum="3"
    android:background="@color/FloralWhite"
    tools:context="me.joshuayuan.a163.MainActivity"

    >
    <Button
        android:id="@+id/play_button"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/play"
        android:textSize="@dimen/regular_text_size"
        android:fontFamily="OpenSans-Regular"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:width="300dp"
        android:background="@drawable/rounded_button"/>
    <Button
        android:id="@+id/stats_button"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/stats"
        android:textSize="@dimen/regular_text_size"
        android:fontFamily="OpenSans-Regular"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:width="300dp"
        android:background="@drawable/rounded_button"/>
    <Button
        android:id="@+id/settings_button"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textSize="@dimen/regular_text_size"
        android:fontFamily="OpenSans-Regular"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:width="300dp"
        android:background="@drawable/rounded_button"/>
</LinearLayout>
