<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/LightSteelBlue"
    tools:context="me.joshuayuan.a163.GameActivity"
    android:orientation="vertical"
    android:weightSum="2"
    android:id="@+id/father_layout"

    >
    <LinearLayout
        android:id="@+id/top_card_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="3">
        <me.joshuayuan.a163.CardSlot
            android:id="@+id/card_slot_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/cardslot"
            android:textColor="@color/Black"
            android:textSize="@dimen/card_text_size"
            android:fontFamily="OpenSans-Regular"
            android:layout_margin="5dp"
            android:layout_weight="1"
            />
        <me.joshuayuan.a163.CardSlot
            android:id="@+id/card_slot_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/cardslot"
            android:textColor="@color/Black"
            android:textSize="@dimen/card_text_size"
            android:fontFamily="OpenSans-Regular"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
        <me.joshuayuan.a163.CardSlot
            android:id="@+id/card_slot_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/cardslot"
            android:textColor="@color/Black"
            android:textSize="@dimen/card_text_size"
            android:fontFamily="OpenSans-Regular"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_card_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="3">
        <me.joshuayuan.a163.CardSlot
            android:id="@+id/card_slot_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/cardslot"
            android:textColor="@color/Black"
            android:textSize="@dimen/card_text_size"
            android:fontFamily="OpenSans-Regular"
            android:padding="0dp"
            android:layout_margin="5dp"
            android:text="123.56"
            android:layout_weight="1"/>
        <me.joshuayuan.a163.CardSlot
            android:id="@+id/card_slot_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/cardslot"
            android:textColor="@color/Black"
            android:textSize="@dimen/card_text_size"
            android:fontFamily="OpenSans-Regular"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
        <me.joshuayuan.a163.CardSlot
            android:id="@+id/card_slot_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/cardslot"
            android:textColor="@color/Black"
            android:textSize="@dimen/card_text_size"
            android:fontFamily="OpenSans-Regular"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/operations_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center">
        <Button
            android:id="@+id/mult_button"
            android:text="@string/mult_button_text"
            android:fontFamily="OpenSans-Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/div_button"
            android:text="@string/div_button_text"
            android:fontFamily="OpenSans-Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/split_button"
            android:text="@string/split_button_text"
            android:fontFamily="OpenSans-Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/submit_button"
            android:text="@string/submit_button_text"
            android:fontFamily="OpenSans-Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/plus_button"
            android:text="@string/plus_button_text"
            android:fontFamily="OpenSans-Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/sub_button"
            android:text="@string/sub_button_text"
            android:fontFamily="OpenSans-Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
